--- a/package.json
+++ b/package.json
@@ -15,16 +15,21 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.0.2",
     "@supabase/supabase-js": "^2.45.3",
     "@tanstack/react-query": "^5.55.0",
     "base64-arraybuffer": "^1.0.2",
     "dayjs": "^1.11.13",
     "expo": "~51.0.28",
+    "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
+    "expo-device": "^6.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.9",
     "expo-image-picker": "^15.0.7",
     "expo-linking": "~6.3.1",
+    "expo-notifications": "^0.28.16",
     "expo-router": "~3.5.23",
     "expo-secure-store": "~13.0.2",
     "expo-splash-screen": "~0.27.5",
@@ -36,6 +41,7 @@
     "react-native": "0.74.5",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.19.0",
+    "react-native-pager-view": "6.3.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
